# Loc-Box

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
docs/: REQUIREMENTS.md
scripts/: package.sh
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
